@@ -1,60 +1,63 @@
 package org.vl4ds4m.banking.converter.api;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.vl4ds4m.banking.converter.ConverterExceptionHandler;
 import org.vl4ds4m.banking.converter.ConverterService;
+import org.vl4ds4m.banking.converter.api.model.ConvertCurrencyResponse;
+import org.vl4ds4m.banking.converter.api.model.Currency;
+import org.vl4ds4m.banking.converter.api.model.InvalidQueryResponse;
 import org.vl4ds4m.banking.converter.exception.InvalidCurrencyException;
 import org.vl4ds4m.banking.converter.exception.NonPositiveAmountException;
-import org.vl4ds4m.banking.converter.message.CurrencyMessage;
-import org.vl4ds4m.banking.converter.message.ErrorMessage;
 import org.vl4ds4m.banking.converter.rates.RatesServiceException;
 
 import java.math.BigDecimal;
 
 @RestController
-public class ConverterController {
-    private static final Logger logger = LoggerFactory.getLogger(ConverterController.class);
+@Slf4j
+@RequiredArgsConstructor
+public class ConverterController implements ConvertApi {
 
-    private static final ConverterExceptionHandler handler =
-        new ConverterExceptionHandler(logger);
+    private static final ConverterExceptionHandler handler = new ConverterExceptionHandler(log);
 
     private final ConverterService service;
 
-    public ConverterController(ConverterService service) {
-        this.service = service;
-    }
-
-    @GetMapping("/convert")
-    public CurrencyMessage convert(
-        @RequestParam("from") String source,
-        @RequestParam("to") String target,
-        @RequestParam("amount") BigDecimal amount
+    @Override
+    public ResponseEntity<ConvertCurrencyResponse> convertCurrency(
+            Currency from,
+            Currency to,
+            BigDecimal amount
     ) {
-        logger.debug("Accept GET /convert?from={}&to={}&amount={}", source, target, amount);
-        BigDecimal converted = service.convert(source, target, amount);
-        return new CurrencyMessage(target, converted);
+        log.info("Accept {} {}: {}, {} -> {}",
+                HttpMethod.GET, ConvertApi.PATH_CONVERT_CURRENCY,
+                amount, from, to);
+        var convertedAmount = service.convert(from.getValue(), to.getValue(), amount);
+        var response = new ConvertCurrencyResponse(convertedAmount);
+        return ResponseEntity.ok(response);
     }
 
     @ExceptionHandler
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorMessage returnNonPositiveAmountMessage(NonPositiveAmountException e) {
+    public InvalidQueryResponse returnNonPositiveAmountMessage(NonPositiveAmountException e) {
         handler.debugNonPositiveAmount(e);
-        return new ErrorMessage("Отрицательная сумма");
+        return new InvalidQueryResponse("Отрицательная сумма");
     }
 
     @ExceptionHandler
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorMessage returnInvalidCurrencyMessage(InvalidCurrencyException e) {
+    public InvalidQueryResponse returnInvalidCurrencyMessage(InvalidCurrencyException e) {
         handler.debugInvalidCurrency(e);
-        return new ErrorMessage(String.format("Валюта %s недоступна", e.currency));
+        return new InvalidQueryResponse("Валюта %s недоступна".formatted(e.currency));
     }
 
     @ExceptionHandler
     @ResponseStatus(HttpStatus.SERVICE_UNAVAILABLE)
-    public void warnRatesServiceError(RatesServiceException e) {
-        handler.warnRatesServiceError(e);
+    public InvalidQueryResponse warnRatesServiceError(RatesServiceException e) {
+        var reason = handler.warnRatesServiceError(e);
+        return new InvalidQueryResponse(reason);
     }
 }
